# text-on-image

./: CMakeLists.txt  README.md
src/: main.cpp
